force-app/main/default/objects/BCCatastro__c/BCCatastro__c.object-meta.xml
<CustomObject>
    <description>Objeto utlizado para registrar los códigos catastrales o prediales MIMG</description>
    <label>Catastro</label>
    <nameField>
        <label>Código catastral</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catastros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>