force-app/main/default/objects/BCCatastro__c/fields/BCCoordenadageoreferencial__c.field-meta.xml
<CustomField>
    <fullName>BCCoordenadageoreferencial__c</fullName>
    <label>Coordenada georeferencial</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>