force-app/main/default/objects/BCCatastro__c/fields/BCDivision__c.field-meta.xml
<CustomField>
    <fullName>BCDivision__c</fullName>
    <label>División</label>
    <length>255</length>
    <type>Text</type>
</CustomField>