force-app/main/default/objects/BCCatastro__c/fields/BCPHV__c.field-meta.xml
<CustomField>
    <fullName>BCPHV__c</fullName>
    <label>PHV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>