force-app/main/default/objects/BCCatastro__c/fields/BCPropietario__c.field-meta.xml
<CustomField>
    <fullName>BCPropietario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Propietario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Catastros</relationshipLabel>
    <relationshipName>Catastros</relationshipName>
    <type>Lookup</type>
</CustomField>