force-app/main/default/objects/BCCatastro__c/fields/BCSector__c.field-meta.xml
<CustomField>
    <fullName>BCSector__c</fullName>
    <label>Sector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>